force-app/main/default/objects/CaseFTTHComponent__c/CaseFTTHComponent__c.object-meta.xml
<CustomObject>
    <label>Case FTTH Component</label>
    <nameField>
        <label>FTTH Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case FTTH Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>