force-app/main/default/objects/CaseFTTHComponent__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case FTTH Components</relationshipLabel>
    <relationshipName>Case_FTTH_Components</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>