force-app/main/default/objects/CaseFTTHComponent__c/fields/Circle__c.field-meta.xml
<CustomField>
    <fullName>Circle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Circle</label>
    <referenceTo>Circles__c</referenceTo>
    <relationshipLabel>Case FTTH Components</relationshipLabel>
    <relationshipName>Case_FTTH_Components</relationshipName>
    <type>Lookup</type>
</CustomField>