force-app/main/default/objects/CaseFTTHComponent__c/fields/ComponentId__c.field-meta.xml
<CustomField>
    <fullName>ComponentId__c</fullName>
    <label>Component Id</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>