force-app/main/default/objects/CaseFTTHComponent__c/fields/ComponentMapLink__c.field-meta.xml
<CustomField>
    <fullName>ComponentMapLink__c</fullName>
    <formula>IF(ISBLANK( Latitude__c ) ,&quot;&quot;, HYPERLINK(&quot;https://maps.google.com/?t=k&amp;q=&quot; + Latitude__c + &quot;,&quot; + Longitude__c + &quot;&amp;ll=&quot; + Latitude__c + &quot;,&quot; +  Longitude__c  + &quot;&amp;z=20&quot;,$Label.sitetracker__Map))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ComponentMapLink</label>
    <type>Text</type>
</CustomField>