force-app/main/default/objects/CaseFTTHComponent__c/fields/ComponentType__c.field-meta.xml
<CustomField>
    <fullName>ComponentType__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GPON</fullName>
            </value>
            <value>
                <fullName>FAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>