force-app/main/default/objects/CaseFTTHComponent__c/fields/FDCLocation__c.field-meta.xml
<CustomField>
    <fullName>FDCLocation__c</fullName>
    <label>FDC Location</label>
    <type>TextArea</type>
</CustomField>