force-app/main/default/objects/CaseFTTHComponent__c/fields/FieldEngineer__c.field-meta.xml
<CustomField>
    <fullName>FieldEngineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_FTTH_Components</relationshipName>
    <type>Lookup</type>
</CustomField>