force-app/main/default/objects/CaseFTTHComponent__c/fields/InstallationAddress__c.field-meta.xml
<CustomField>
    <fullName>InstallationAddress__c</fullName>
    <label>Installation Address</label>
    <type>TextArea</type>
</CustomField>