force-app/main/default/objects/CaseFTTHComponent__c/fields/IsReported__c.field-meta.xml
<CustomField>
    <fullName>IsReported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsReported</label>
    <type>Checkbox</type>
</CustomField>