force-app/main/default/objects/CaseFTTHComponent__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Holds the floor/wing of the apartment/building (especially for FAT)</description>
    <inlineHelpText>Holds the floor/wing of the apartment/building (especially for FAT)</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>