force-app/main/default/objects/CaseFTTHComponent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>ComponentType__c</columns>
    <columns>ComponentId__c</columns>
    <columns>Location__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IsReported__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>